--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>两盒的腾讯云项目</title>
-    <link rel="stylesheet" href="./M-Jubensha/CSS/base.css">
-    <link rel="stylesheet" href="./M-JubenshaCSS/index.css">
+    <link rel="stylesheet" href="CSS/base.css">
+    <link rel="stylesheet" href="CSS/index.css">
 
 </head>
 <body>
@@ -154,4 +154,5 @@
         </div>
     </div>
 </body>
+
 </html>
