--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     学生，个人开发者打造，购买云+校园任意春餐可免费观着课程视频本课程专为云计算初学者，学生，个人开发者打造，
                     购买云+校四任意套各可免费观看课程视频本课程专为云计算初学者，学生，个人开发者打造，购买云+校园任意音餐可免费观看课程视须本课程专为云计算初学者，
                     学生，个人开发者打造，购买云+校园任意接餐可免费观着课程视须</p>
-                    <a href="../小米模块案例/小米模块案例-剧本杀版.html" target="_blank">开始学习</a>
+                    <a href="https://www.icourse163.org/" target="_blank">开始学习</a>
                 </div>
                 <div class="right">
                     <img src="./images/right.png" alt="">
@@ -156,3 +156,4 @@
 </body>
 
 </html>
+
